--- a/mmteditor/index.html
+++ b/mmteditor/index.html
@@ -3,13 +3,15 @@
 <title>CodeMirror: MMT Autocomplete Demo</title>
 <meta charset="utf-8"/>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/hint/show-hint.min.css">
+<link rel="stylesheet" href="../exports/CodeMirror/lib/codemirror.css">
+<link rel="stylesheet" href="../exports/CodeMirror/addon/hint/show-hint.min.css">
 
+<!-- vvv update the version here if you update the ../exports/CodeMirror Git submodule -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/addon/hint/show-hint.min.js"></script>
-<script src="addon/mode/advanced.js"></script>
-<script src="mode/mmt/mmt.js"></script>
+<script src="../exports/CodeMirror/addon/hint/show-hint.min.js"></script>
+
+<script src="../exports/CodeMirror/addon/mode/advanced.js"></script>
+<script src="../exports/CodeMirror/mode/mmt/mmt.js"></script>
 
 <article>
 <h2>Autocomplete Demo</h2>
@@ -51,6 +53,7 @@ const abbreviations = loadAbbreviations();
 const Pos = CodeMirror.Pos;
 
 function findMatchingAbbreviations(str, cursorLine, tokenEndCh) {
+  console.log(str);
   str = str.toLowerCase();
 
   const matches = [];
@@ -73,7 +76,7 @@ function findMatchingAbbreviations(str, cursorLine, tokenEndCh) {
   return matches;
 }
 
-CodeMirror.registerHelper("hint", "javascript", function(editor, options) {
+CodeMirror.registerHelper("hint", "mmt", function(editor, options) {
   // Find the token at the cursor
   var cur = editor.getCursor();
   var token = editor.getTokenAt(cur);
