--- a/mmteditor/index.html
+++ b/mmteditor/index.html
@@ -3,16 +3,17 @@
 <title>CodeMirror: MMT Autocomplete Demo</title>
 <meta charset="utf-8"/>
 
-<link rel="stylesheet" href="../exports/CodeMirror/lib/codemirror.css">
-<link rel="stylesheet" href="../exports/CodeMirror/theme/dracula.css">
-<link rel="stylesheet" href="../exports/CodeMirror/addon/hint/show-hint.css">
+<!-- vvv update the version here if you update the ../exports/codemirror Git submodule -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.css">
+<link rel="stylesheet" href="../exports/codemirror/theme/dracula.css">
+<link rel="stylesheet" href="../exports/codemirror/addon/hint/show-hint.css">
 
-<!-- vvv update the version here if you update the ../exports/CodeMirror Git submodule -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.js"></script>
+<!-- vvv update the version here if you update the ../exports/codemirror Git submodule -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.58.1/codemirror.min.js"></script>
 <script src="../exports/CodeMirror/addon/hint/show-hint.js"></script>
 
-<script src="../exports/CodeMirror/addon/mode/advanced.js"></script>
-<script src="../exports/CodeMirror/mode/mmt/mmt.js"></script>
+<script src="../exports/codemirror/addon/mode/advanced.js"></script>
+<script src="../exports/codemirror/mode/mmt/mmt.js"></script>
 
 <article>
 <h2>Autocomplete Demo</h2>
